Fix persistent scroll bar bug with code blocks + improve spacing

--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -219,8 +219,7 @@ p {
     figure.highlight { margin: 0; }
     pre {
         background: @brand-five-light;
-        padding: 1rem 1.5rem;
-        overflow-x: scroll;
+        padding: 0.5rem 0.75rem;
         -webkit-overflow-scrolling: touch;
         code {
             background: none;
