--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -27,7 +27,7 @@
 @brand-four:    lighten(@brand-three, 50%);
 @brand-five:    #D7D7D7;
 
-@brand-five-light: lighten(@brand-five, 12%);
+@brand-five-light: lighten(@brand-five, 9%);
 @brand-five-dark:  darken( @brand-five, 10%);
 
 
